jhead (2.875-1) unstable; urgency=low

  * New upstream release
   - Fix "document Nonfatal Error: Illegal subdirectory link" the error
     message is now explicit that the erorr is in EXIF data and not the file
     system (Closes: #525724)
  * update from debhelper 4 to 7

 -- Ludovic Rousseau <rousseau@debian.org>  Thu, 30 Apr 2009 18:18:51 +0200

jhead (2.87-1) unstable; urgency=low

  * New upstream release
   - Closes: #517990: jhead: -ce broken (fix released in 2.87)

 -- Ludovic Rousseau <rousseau@debian.org>  Sat, 07 Mar 2009 14:10:41 +0100

jhead (2.86-2) unstable; urgency=low

  * debian/patches/20_jhead.1: Closes: #515659
    "jhead: Manpage error in '-te' example"
  * use quilt again

 -- Ludovic Rousseau <rousseau@debian.org>  Wed, 18 Feb 2009 15:55:26 +0000

jhead (2.86-1) unstable; urgency=low

  * New upstream release
  * remove patches 01_makefile, 07_jhead.1, 08_jhead.1, 09_long_int,
    10_jhead.1 since they are now included upstream
  * do not use quilt anymore (no patch needed)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 15 Feb 2009 14:45:20 +0100

jhead (2.85-1) unstable; urgency=low

  * New upstream release
   - Closes: #504194 "CVE-2008-4640: insecure file handling"
  * debian/patches/11_jhead.c.dpatch: removed since included upstream
  * debian/*: change from dpatch to quilt

 -- Ludovic Rousseau <rousseau@debian.org>  Thu, 06 Nov 2008 21:51:09 +0100

jhead (2.84-2) unstable; urgency=high

  * urgency high since it fixes a security RC bug: CVE-2008-4641
  * debian/patches/11_jhead.c.dpatch: Closes: #503645: jhead: CVE-2008-4641
    command injection via filename and insecure file handling

 -- Ludovic Rousseau <rousseau@debian.org>  Fri, 31 Oct 2008 19:53:26 +0100

jhead (2.84-1) unstable; urgency=high

  * New upstream release
   - Closes: #502353 "Security issues fixed in 2.84"
   - Fix CVE-2008-4575: "Buffer overflow in the DoCommand function in jhead
   before 2.84 might allow context-dependent attackers to cause a denial of