@@ -3,7 +3,7 @@ Section: graphics
 Priority: optional
 Maintainer: Ludovic Rousseau <rousseau@debian.org>
 Build-Depends: debhelper (>> 7.0.0), quilt
-Standards-Version: 3.7.3
+Standards-Version: 3.8.1
 Homepage: http://www.sentex.net/~mwandel/jhead/
 
 Package: jhead
