@@ -5,11 +5,24 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-version := $(shell dpkg-parsechangelog | \
-	sed -ne 's/^Version: *\([0-9]\+:\)*//p')
+CFLAGS = -Wall -g
+INSTALL = install
+INSTALL_PROGRAM = $(INSTALL) -p    -o root -g root  -m  755
 
-tag:
-	cvs tag -c -F $(subst .,_,debian_version_$(version))
+ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -O0
+else
+	CFLAGS += -O2
+endif
+
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	INSTALL_PROGRAM += -s
+endif
+
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	MAKEFLAGS += -j$(NUMJOBS)
+endif
 
 include /usr/share/quilt/quilt.make
 
@@ -18,7 +31,7 @@ build-stamp: patch
 	dh_testdir
 
 	# Add here commands to compile the package.
-	$(MAKE) -f makefile
+	$(MAKE) -f makefile CFLAGS="$(CFLAGS)" MAKEFLAGS="$(MAKEFLAGS)"
 
 	touch build-stamp
 
